fix gap between cards and buttons

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1 {
   margin: 50px auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 10px;
 }
 .block {
   flex: 1 0 300px;
@@ -107,11 +107,11 @@ h1 {
   margin: 0 auto;
   display: flex;
   justify-content: center;
+  gap: 10px;
 }
 .btn {
   width: 75px;
   height: 75px;
-  margin: 0 5px;
   display: flex;
   justify-content: center;
   align-items: center;
